--- a/WT/Slip 1.html
+++ b/WT/Slip 1.html
@@ -1,41 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sample Form</title>
+    <title>Project Form</title>
     <style>
-        /* Internal CSS */
-        h1 {
+        h2 {
             font-size: 6pt;
             color: red;
         }
         body {
             background-color: yellow;
+            font-family: Arial, sans-serif;
+        }
+        form {
+            margin: 20px;
         }
     </style>
 </head>
 <body>
-    <h1>Registration Form</h1>
-
+    <h2>Project Details Form</h2>
     <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name"><br><br>
+        <label>Project Name:</label>
+        <input type="text" name="project_name"><br><br>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br><br>
-
-        <label for="gender">Gender:</label>
-        <input type="radio" id="male" name="gender" value="male"> Male
-        <input type="radio" id="female" name="gender" value="female"> Female<br><br>
-
-        <label for="course">Course:</label>
-        <select id="course" name="course">
-            <option value="bsc">B.Sc</option>
-            <option value="bca">BCA</option>
-            <option value="bcom">B.Com</option>
+        <label>Assigned To:</label>
+        <select name="assigned_to">
+            <option>--Select--</option>
+            <option>Person A</option>
+            <option>Person B</option>
+            <option>Person C</option>
         </select><br><br>
 
+        <label>Start Date:</label>
+        <input type="date" name="start_date"><br><br>
+
+        <label>End Date:</label>
+        <input type="date" name="end_date"><br><br>
+
+        <label>Priority:</label>
+        <input type="radio" name="priority" value="high">High
+        <input type="radio" name="priority" value="avg">Average
+        <input type="radio" name="priority" value="low">Low<br><br>
+
+        <label>Description:</label><br>
+        <textarea name="description" rows="4" cols="30"></textarea><br><br>
+
         <input type="submit" value="Submit">
-        <input type="reset" value="Reset">
     </form>
 </body>
 </html>
