--- a/WT/Slip 1.html
+++ b/WT/Slip 1.html
@@ -1,3 +1,11 @@
+<--
+    Write the HTML code for generating the form as shown below.
+    Apply the internal CSS to the following form to change
+    the font size of the heading to 6pt and change the color to red
+    and also change the background color to yellow.
+-->
+ 
+
 <!DOCTYPE html>
 <html>
 <head>
