--- a/WT/Slip 2.html
+++ b/WT/Slip 2.html
@@ -1,3 +1,12 @@
+<--
+     Create HTML5 page with following specifications:
+        i) Title should be about your City.
+        ii) Color the background by Pink color. 
+        iii) Place your city name at the top of page in large text and in blue color.
+        iv) Add names of the landmarks in your city, each in different color, style and font.
+        v) Add any image at the bottom. (Use inline CSS to format the web page). 
+
+
 <!DOCTYPE html>
 <html>
 <head>
