--- a/WT/Slip 3.html
+++ b/WT/Slip 3.html
@@ -1,9 +1,9 @@
 <!--
-Write a program using html with following CSS specifications- 
-1 The background colour of the company name should be in green. 
-ii. The text colour of the company name should be red.
-iii. The heading should be large –with font ''comic sans ms''.
-iv. The description of the company should be displayed in blue color in a paragraph.
+    Write a program using html with following CSS specifications- 
+        i. The background colour of the company name should be in green.
+        ii. The text colour of the company name should be red.
+        iii. The heading should be large –with font ''comic sans ms''.
+        iv. The description of the company should be displayed in blue color in a paragraph.
 -->
 
 
